[package]
name = "trusty_trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustatistics = { git = "https://github.com/josephleblanc/rustatistics.git" }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
